# TabsPls

./: .clang-format  .gitmodules  CMakeLists.txt  CurrentDirectoryProvider.hpp  DirectoryHistory.hpp  FileSystemDirectory.cpp  FileSystemDirectory.hpp  FileSystemFilePath.hpp  FileUri.cpp  FileUri.hpp  SmartGtk.hpp  boot_icon.xcf  clang_format_all.sh  clang_format_check_all.sh  readme.md
.github/workflows/: c-cpp-clang-format.yml  c-cpp-no-python.yml  c-cpp-windows.yml  c-cpp.yml  core_test.yml  core_test_linux.yml  core_test_windows.yml
GtkGui/: DirectoryHistoryButtons.cpp  DirectoryHistoryButtons.hpp  DirectoryNavigationField.cpp  DirectoryNavigationField.hpp  DragAndDrop.cpp  FileListView.cpp  FileListView.hpp
TabsPlsMain/: CMakeLists.txt  main.cpp
TabsPls_Core/: CMakeLists.txt  provision_sources.cmake  readme.md
TabsPls_Core/TabsPls_Core_StdFileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystemOp.cpp
TabsPls_Core/TabsPls_Core_StdFileSystem/include/: FileSystemDefs.hpp
TabsPls_Core/include/TabsPlsCore/: CurrentDirectoryFileOp.hpp  DirectoryHistoryStore.hpp  DirectoryInputAutoComplete.hpp  EmbeddedPython.hpp  FileSystem.hpp  FileSystemAlgorithm.hpp  FileSystemDirectory.hpp  FileSystemFilePath.hpp  FileSystemOp.hpp  ProgressReport.hpp  RobustDirectoryHistoryStore.hpp  Send2Trash.hpp  SortedVector.hpp  TabModel.hpp  TabsPlsLog.hpp  TargetDirectoryConstraints.hpp  Toolbar.hpp
TabsPls_Core/include/TabsPlsCore/exception/: TabsPlsException.hpp
TabsPls_Core/source/: CurrentDirectoryFileOp.cpp  DirectoryHistoryStore.cpp  DirectoryInputAutoComplete.cpp  FileSystemAlgorithm.cpp  FileSystemDirectory.cpp  FileSystemFilePath.cpp  RobustDirectoryHistoryStore.cpp  TabModel.cpp  TargetDirectoryConstraints.cpp
TabsPls_GTK/: CMakeLists.txt  CurrentDirectoryProvider.hpp  FileSystemDirectory.cpp  FileSystemFilePath.cpp  FileUri.cpp  SmartGtk.hpp  readme.md
TabsPls_GTK/GtkGui/: DirectoryField.cpp  DirectoryField.hpp  DirectoryHistoryButtons.cpp  DirectoryHistoryButtons.hpp  DirectoryNavigationField.cpp  DirectoryNavigationField.hpp  DragAndDrop.cpp  DragAndDrop.hpp  FileListView.cpp  FileListView.hpp
TabsPls_GTK/Gui/: DirectoryChangedAction.hpp
TabsPls_GTK/TabsPlsMain/: CMakeLists.txt  main.cpp
TabsPls_GTK/cmakeliststxt/: vcpkg_x64-linux.txt
TabsPls_GTK/model/: FileSystem.cpp
TabsPls_GTK/test/: CMakeLists.txt  testSmartGtk.cpp
TabsPls_Python/: CMakeLists.txt
TabsPls_Python/PyWinIconExtract/: extract.py
TabsPls_Python/WinIconExtract/: CMakeLists.txt  main.cpp
TabsPls_Python/include/TabsPls_Python/: Send2Trash.hpp  TabsPls_Python.hpp
TabsPls_Python/share/: TabsPlsToolbar.py  Toolbar_Shortcuts.py
TabsPls_Python/src/: EmbeddedPython.cpp  PythonErrorDump.cpp  PythonErrorDump.hpp  PythonRAII.hpp  Send2Trash.cpp  TabsPls_Python.cpp  Toolbar.cpp
TabsPls_Qt/: vcpkg.json
TabsPls_Qt/LightSpeedFileExplorer/: .gitignore  AssociatedIconProvider.hpp  AssociatedIconProvider_stub.cpp  CMakeLists.txt  CMakePresets.json  CurrentDirectoryFileOpQtImpl.cpp  CurrentDirectoryFileOpQtImpl.hpp  DirectoryChanger.hpp  DirectoryInputField.cpp  DirectoryInputField.hpp  EmbeddedPython_stub.cpp  EscapePod.cpp  EscapePod.hpp  EscapePodLauncher.cpp  EscapePodLauncher.hpp  ExplicitStub.hpp  FileBrowserViewModelProvider.hpp  FileBrowserViewModelSwitcher.cpp  FileBrowserViewModelSwitcher.hpp  FileBrowserWidget.cpp  FileBrowserWidget.hpp  FileEntryModel.cpp  FileEntryModel.hpp  FileListTableView.cpp  FileListTableView.hpp  FileListTableViewWithFilter.cpp  FileListTableViewWithFilter.hpp  FileListViewModel.cpp  FileListViewModel.hpp  FileRetrievalByDispatch.cpp  FileRetrievalByDispatch.hpp  FileRetrievalRunnable.cpp  FileRetrievalRunnable.hpp  FileSystemDefsConversion.cpp  FileSystemDefsConversion.hpp  FileSystemOp.cpp  FilterHookedFileListTableView.cpp  FilterHookedFileListTableView.hpp  FilterHookedLineEdit.cpp  FilterHookedLineEdit.hpp  (+32 more)
TabsPls_Qt/LightSpeedFileExplorer/EscapePod/: CMakeLists.txt  main.cpp
TabsPls_Qt/LightSpeedFileExplorer/TabsPlsCore_defs/: FileSystemDefs.hpp
TabsPls_Qt/LightSpeedFileExplorer/TabsPls_WinIconExtract/: AssociatedIconProvider.cpp
TabsPls_Qt/LightSpeedFileExplorer/TabsPls_WinIconExtract/WinIconExtract/: WinIconExtract.cpp
TabsPls_Qt/LightSpeedFileExplorer/TabsPls_WinIconExtract/WinIconExtract/include/: WinIconExtract.hpp
TabsPls_Qt/LightSpeedFileExplorer/WinIconExtract/: CMakeLists.txt  WinIconExtract.cpp  main.cpp
TabsPls_Qt/LightSpeedFileExplorer/WinIconExtract/include/: WinIconExtract.hpp
TabsPls_Qt/LightSpeedFileExplorer/model/: FileSystem.cpp
TabsPls_Qt/LightSpeedFileExplorer/portable_launcher/: Launch.bat
TabsPls_Qt/LightSpeedFileExplorer/res/: resources.qrc.template
TabsPls_Qt/LightSpeedFileExplorer/res_win32/: resources.rc.template
TabsPls_Qt/LightSpeedFileExplorer/toolbars_plugin/: MouseWheelClickEventFilter.cpp  MouseWheelClickEventFilter.hpp  PluginProvisionedToolbar.cpp  PluginProvisionedToolbar.hpp
TabsPls_Qt/cmakeliststxt/: vcpkg_x64-linux.txt  vcpkg_x64-windows.txt
TabsPls_Test/: CMakeLists.txt  FakeFileSystem.cpp  FakeFileSystem.hpp  TabsPlsLogTest.cpp  TestPaths.h.in  gtest_main.cc  gtest_main_tabspls_plugin_test.cc  testCatchPythonException.cpp  testCreateNewDirectory.cpp  testDirectoryHistoryStore.cpp  testDirectoryInputAutoComplete.cpp  testFileSystemAlgorithm.cpp  testRobustDirectoryHistoryStore.cpp  testSortedVector.cpp  testTabModel.cpp  testTargetDirectoryConstraints.cpp  testToolbar.cpp
TabsPls_Test/TabsPlsCore_defs/: FileSystemDefs.hpp
TabsPls_Test/cmakeliststxt/: vcpkg_x64-windows.txt
TabsPls_Test/meta/: testFakeFileSystem.cpp  testFakeFileSystemOp.cpp
TabsPls_Test/plugins_test_input/: TabsPlsToolbar.py  Toolbar_Tester.py
TabsPls_UWP/: readme.md
TabsPls_UWP/LightSpeedExplorer/: LightSpeedExplorer.sln
TabsPls_UWP/LightSpeedExplorer/LightSpeedExplorer/: App.xaml  App.xaml.cs  DirectoryEntry.cs  DirectoryView.xaml  DirectoryView.xaml.cs  LightSpeedExplorer.csproj  MainPage.xaml  MainPage.xaml.cs  (+1 more)
extra/: file_locker.py
model/: FileSystem.cpp  FileSystem.hpp
test/: CMakeLists.txt
(+16 files in other folders)
